--- a/pkg-server/pkg-server-user/pom.xml
+++ b/pkg-server/pkg-server-user/pom.xml
@@ -16,5 +16,7 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
 
+    </dependencies>
 </project>
